--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
     
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+        <script defer data-domain="rsachecker.jakefarrell.ie" src="https://plausible.jakefarrell.ie/js/script.js"></script>
     </head>
 <body class="bg-gray-100 min-h-screen">
     <div x-data="testCenters()" x-init="fetchData()" class="container mx-auto px-4 py-8">
